# uncoded

./: .gitignore  .markdownlint-cli2.yaml  .mcp.json  .pre-commit-config.yaml  ADA.md  AGENTS.md  CLAUDE.md  MAINTENANCE.md  README.md  SYSTEM.md  TEAM.md  pyproject.toml
.agents/skills/coherence-review/: SKILL.md
.agents/skills/uncoded-code-navigation/: SKILL.md
.agents/skills/uncoded-coherence-review/: SKILL.md
.agents/skills/uncoded-doc-navigation/: SKILL.md
.claude/: settings.json
.claude/skills/coherence-review/: SKILL.md
.claude/skills/uncoded-code-navigation/: SKILL.md
.claude/skills/uncoded-coherence-review/: SKILL.md
.claude/skills/uncoded-doc-navigation/: SKILL.md
.claude/skills/uncoded-review/: SKILL.md
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
.uncoded/: docs.yaml  namespace.yaml
.uncoded/reviews/: coherence-review-2026-04-25.md
.uncoded/stubs/src/uncoded/: __init__.pyi  ast_helpers.pyi  body.pyi  claude_md.pyi  cli.pyi  config.pyi  docs_map.pyi  extract.pyi  instruction_files.pyi  markers.pyi  namespace_map.pyi  read_helpers.pyi  refs.pyi  resolver.pyi  serena_setup.pyi  skill.pyi  stubs.pyi  sync.pyi  yaml_tree.pyi
.uncoded/stubs/tests/: test_body.pyi  test_cli.pyi  test_config.pyi  test_docs_map.pyi  test_encoding_gate.pyi  test_extract.pyi  test_instruction_files.pyi  test_markers.pyi  test_namespace_map.pyi  test_refs.pyi  test_serena_setup.pyi  test_skill.pyi  test_stubs.pyi  test_sync.pyi  test_uncoded.pyi
src/uncoded/: __init__.py  ast_helpers.py  body.py  claude_md.py  cli.py  code_navigation.md  coherence_review.md  config.py  dispatch_rule.md  doc_navigation.md  docs_map.py  docs_rule.md  extract.py  instruction_files.py  markers.py  namespace_map.py  read_helpers.py  refs.py  resolver.py  serena_setup.py  skill.py  stubs.py  sync.py  yaml_tree.py
tests/: test_body.py  test_cli.py  test_config.py  test_docs_map.py  test_encoding_gate.py  test_extract.py  test_instruction_files.py  test_markers.py  test_namespace_map.py  test_refs.py  test_serena_setup.py  test_skill.py  test_stubs.py  test_sync.py  test_uncoded.py
tools/: check_encoding.py  check_test_encoding.py  check_ty.py
