[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uncoded"
dynamic = ["version"]
description = "Symbol index with associated code reading tools for AI coding agent navigation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Alistair Miles", email = "alimanfoo@googlemail.com" },
]
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
uncoded = "uncoded.cli:main"

[project.urls]
Homepage = "https://github.com/alimanfoo/uncoded"
Repository = "https://github.com/alimanfoo/uncoded"

[tool.hatch.version]
source = "vcs"

[tool.uncoded]
source-roots = ["src", "tests"]
doc-roots = ["README.md", "AGENTS.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov -m 'not integration'"
markers = ["integration: spawns real ty subprocess (requires uvx)"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
src = ["src"]
line-length = 88
extend-exclude = [".uncoded"]

[tool.ruff.lint]
select = [
    "D",    # pydocstyle (pep257)
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C901", # mccabe complexity
    "W",    # pycodestyle warnings
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie (misc. lints)
    "FLY",  # flynt (f-string conversion)
    "PERF", # perflint (performance anti-patterns)
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # policy stated in "Docstrings" section of AGENTS.md

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
