[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uncoded"
dynamic = ["version"]
description = "Symbol index with associated code reading tools for AI coding agent navigation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Alistair Miles", email = "alimanfoo@googlemail.com" },
]
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff==0.15.19",
    "ty>=0.0.53",
]

[project.scripts]
uncoded = "uncoded.cli:main"

[project.urls]
Homepage = "https://github.com/alimanfoo/uncoded"
Repository = "https://github.com/alimanfoo/uncoded"

[tool.hatch.version]
source = "vcs"

[tool.uncoded]
source-roots = ["src", "tests"]
doc-roots = ["README.md", "AGENTS.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov -m 'not integration'"
markers = ["integration: spawns real ty subprocess (requires uvx)"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
src = ["src"]
line-length = 88
extend-exclude = [".uncoded"]

[tool.ruff.lint]
preview = true
select = [
    "D", # pydocstyle (pep257)
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "C901", # mccabe complexity
    "W", # pycodestyle warnings
    "C4", # flake8-comprehensions
    "PIE", # flake8-pie (misc. lints)
    "FLY", # flynt (f-string conversion)
    "PERF", # perflint (performance anti-patterns)
    "RUF", # Ruff-specific rules
    "PLE", # Pylint errors
    "PLW2901", # Pylint: redefined loop variable
    "PLC0415", # Pylint: import not at top of file
    "TC", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "PLR5501", # Pylint: elif after return
    "PLR1711", # Pylint: useless return
    "PLR1714", # Pylint: repeated equality comparison
    "PLR0911", # Pylint: too many return statements
    "PLR0912", # Pylint: too many branches
    "PLR0913", # Pylint: too many arguments
    "PLR0915", # Pylint: too many statements
    "PLR1702", # Pylint: too many nested blocks (preview)
    "ANN", # flake8-annotations
    "S", # flake8-bandit (security)
    "PT", # flake8-pytest-style
    "N", # pep8-naming
]

ignore = [
    "ANN401", # Any as annotation type (too broad to enforce)
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S101"]
